--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <div class="leftside">
             <!-- font awesome SOCIAL MEDIA icons -->
             <ul>
-                    <li><a href="#" class="fa fa-facebook"></a></li></span>
-                    <li><a href="#" class="fa fa-twitter"></a></li>
-                    <li><a href="#" class="fa fa-instagram"></a></li>
+                    <li><a href="https://www.facebook.com/" class="fa fa-facebook"></a></li></span>
+                    <li><a href="https://twitter.com/" class="fa fa-twitter"></a></li>
+                    <li><a href="https://www.instagram.com/aparanapant/" class="fa fa-instagram"></a></li>
             </ul>
         </div>
         <div class="rightside">
@@ -53,7 +53,7 @@
     <ul class="nav-menu">
       <li><a href="#">Home</a></li>
       <li>
-        <a href="#">
+        <a href="#services">
           <i class="fa fa-chevron-down"></i>
           Services</a>
         <ul>
@@ -62,10 +62,10 @@
             <li><a href="#">DENTAL FILLINGS</a></li>
         </ul>
       </li>
-      <li><a href="#">Doctor</a></li>
+      <li><a href="#team">Doctor</a></li>
       <li><a href="#">Gallery</a></li>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Contact Us</a></li>
+      <li><a href="#about">About Us</a></li>
+      <li><a href="#contact">Contact Us</a></li>
 
     </ul>
 </div>
@@ -89,7 +89,7 @@
       </div>
       <!--===============================================================================================================-->
       <div>
-          <div class="about-us-wrapper">
+          <div id="about" class="about-us-wrapper">
               <div class="about-wrap">
                 <h2><span>ABOUT</span> US</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque perspiciatis eligendi earum voluptatem at quae assumenda amet autem fuga vel architecto, incidunt iusto placeat possimus excepturi aspernatur! Sed, ipsam minus.
@@ -159,8 +159,8 @@
         </div>
     </div>
 <!--==============================================================================================-->
- 
-<div class="services-div">
+
+<div id="services" class="services-div">
     <h2><span style="color:#00adef">OUR</span> SERVICES</h2>
     <p>We provide the best service in Nepal</p>
         <div class="services-wrapper">
@@ -193,7 +193,7 @@
                 </div>   
   </div>
     </div>
-
+<!---====================================================================================================-->
     <div class="parallax1-container">
             <div class="parallax1-text">
                 <h2>We provide 24/7 customer support.</h2>
@@ -204,7 +204,7 @@
             </div>
         </div>
         <!--==================================================================================================-->
-        <div class="meet-team-wrapper">
+        <div id= "team" class="meet-team-wrapper">
                 <h1>MEET OUR DOCTORS</h1>
                 <div class="our_team">
                     <div class="team_member">
@@ -324,7 +324,7 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1:3502.379498142622!2d85.33222171470894!3d27.705566782792626!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb199ffe9d7c6b%3A0x91b3a969f305a0bc!2sMaitidevi%2C%20Kathmandu%2044600!5e0!3m2!1sen!2snp!4v1592982091653!5m2!1sen!2snp" width="900" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
                 
-                <div class="footer-section contact">
+                <div id="contact" class="footer-section contact">
                  <div class="f-icons">
                    <i class="fas fa-phone"></i>
                     <h2>PHONE</h2>
