--- a/index.html
+++ b/index.html
@@ -161,20 +161,19 @@
 <!--==============================================================================================-->
   
 <div class="s-wrapper">
-  <h2><span>OUR</span>SERVICES</h2>
+  <h2><span style="color: #00adef;">OUR</span> SERVICES</h2>
   <p> We provide the best services all over Nepal</p>
         <div class= "s-container">
         <div class="each-service">
             <img src="images/service1.jpg">
             <h3>ORTHODONTICS</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque perspiciatis eligendi earum voluptatem at quae assumenda amet autem fuga vel architecto, incidunt iusto placeat possimus excepturi aspernatur! Sed, ipsam minus.
-           </p> 
-           
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem harum nesciunt suscipit consequatur temporibus qui minus beatae cupiditate praesentium eos consectetur placeat corporis odio, rem pariatur nemo voluptates minima corrupti.
+           </p>          
         </div>
         <div class="each-service">
             <img src="images/service1.jpg">
             <h3>ORTHODONTICS</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem harum nesciunt suscipit consequatur temporibus qui minus beatae cupiditate praesentium eos consectetur placeat corporis odio, rem pariatur nemo voluptates minima corrupti.
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam tenetur assumenda reiciendis pariatur amet quam itaque corrupti, ducimus tempore nihil inventore dolor facere laudantium alias quibusdam exercitationem, similique velit magni. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem molestias harum voluptatem est repellat iste modi atque nobis, quidem qui rem dolore consequuntur voluptate blanditiis dolorem distinctio! Quibusdam, maxime repudiandae.
            </p> 
            
         </div>
